# granum

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  TUTORIAL_GERAR_MAPA.md  benchmark_demand_biggest.xlsx  benchmark_results.xlsx  benchmark_supply_biggest.xlsx  docker-compose.yml  fix_duplicate_id.py  patch.diff  patch2.diff  patch_json_v2.py  patch_milp_docs.py  patch_milp_docs2.py  patch_test.py  patch_view.py  patch_view_v2.py  patch_view_v3.py  patch_view_v4.py  patch_view_v5.py  pyproject.toml  run_app.py  run_server.py  server_log.txt  test_execution.py  test_lang.py  test_results_table_i18n.py  test_upload.csv  update_json.py  wsgi.py
benchmark/: README.md
examples/: README.md
scripts/: benchmark_model.py  build.ps1  end_env.ps1  gerar_ofertas_teste.py  run.ps1  run.sh  run_docker.ps1  setup.ps1  setup_osrm.py  start_env.ps1  start_osrm_app.ps1
src/: __main__.py
src/locales/: en.json  pt.json
src/logic/: i18n.py  optimization.py  optimization.py.orig  osrm.py  valhalla.py
src/logic/valhalla/: __init__.py  client.py
src/view/: theme.py  view.py
src/view/assets/: custom.css
src/view/assets/data/: Armazens_Cadastrados_Base.csv  Armazens_Credenciados_Habilitados_Base.csv  Armazens_Personalizados_Base.csv  (+3 more)
src/view/pages/: costs.py  distance_matrix.py  model_config.py  results.py
src/view/tabs/: valhalla_tab.py
tests/: test_conab_parse.py  test_haversine.py  test_model_config.py  test_osrm.py  test_security_vulnerability.py  test_ui.py  test_view_structure.py
verification/: verify_armazens.py  verify_armazens_new_features.py
